--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 									<section class="resume-projects-section resume-section">
 										<h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3"><i class="resume-section-heading-icon bi bi-code-slash me-2"></i>Projects</h3>
 										<div class="item">
-											<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="http://sekarryaaabouquet.lovestoblog.com">Sekarryaaa Bouquet Shop</a></h4>
+											<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="http://sekarryaaabouquet.lovestoblog.com/dashboard_controller">Sekarryaaa Bouquet Shop</a></h4>
 											<div class="item-desc">
 												Website pemesanan buket secara online
 											</div>
